Fixed flinging ball